# quatorzeheures

./: .gitignore  .travis.yml  README.rst  setup.cfg  tox.ini
debian/: changelog  control  copyright  gbp.conf  quatorzeheures.default  quatorzeheures.postinst  quatorzeheures.postrm  quatorzeheures.service  rules  watch
debian/source/: options
examples/: osc.pd
quatorzeheures/: main.py
quatorzeheures/test/: test_quatorzeheures.py
