[bdist_wheel]
universal = 1

[metadata]
name = quatorzeheures
author = Philippe Pepiot
author-email = phil@philpep.org
summary = A Midi to OSC gateway
home-page = http://github.com/philpep/quatorzeheures
description-file = README.rst
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[files]
packages =
    quatorzeheures

[entry_points]
console_scripts =
    quatorzeheures = quatorzeheures.main:main

[pytest]
norecursedirs = .tox .git .local *.egg build
